添加了动态方式进行响应请求